opening "main" preferences pane creates ~/Desktop even when not set to download directory
Categories
(Toolkit :: Downloads API, defect)
Tracking
()
People
(Reporter: pouyak, Assigned: nihal)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
Comment 1•17 years ago
|
||
Comment 2•17 years ago
|
||
Comment 4•17 years ago
|
||
Comment 6•16 years ago
|
||
Updated•16 years ago
|
| Reporter | ||
Comment 10•16 years ago
|
||
Comment 11•15 years ago
|
||
Comment 13•15 years ago
|
||
Comment 14•15 years ago
|
||
Comment 18•12 years ago
|
||
Updated•3 years ago
|
Comment 19•3 years ago
|
||
The severity field for this bug is relatively low, S4. However, the bug has 6 duplicates.
:mak, could you consider increasing the bug severity?
For more information, please visit auto_nag documentation.
Comment 20•3 years ago
|
||
The last needinfo from me was triggered in error by recent activity on the bug. I'm clearing the needinfo since this is a very old bug and I don't know if it's still relevant.
| Assignee | ||
Comment 21•3 years ago
|
||
This problem has been bothering me for some time. I finally decided to figure out what was happening and I think I found the root cause. I'd be happy to send a patch if I could get some guidance on what an appropriate solution is.
First, using breakpoints, I found that the Desktop folder is created on this function call:
https://searchfox.org/mozilla-central/rev/f24503d2f5d8b7e4341be8bc20d94a04a6b223d6/browser/components/preferences/main.js#3057
let desktopDir = await this._getDownloadsFolder("Desktop");
This is used if the user manually sets the system Desktop directory as their Download directory. If it is set, then a locale-specific name is used for the Desktop directory
_getDownloadsFolder in turn calls Services.dirsvc.get("Desk", Ci.nsIFile);. This seems to call the C++ function
rv = GetSpecialSystemDirectory(Unix_XDG_Desktop, getter_AddRefs(localFile));
On Linux, this eventually calls the function GetUnixXDGUserDirectory which runs the following line if the folder doesn't exist:
https://searchfox.org/mozilla-central/rev/f24503d2f5d8b7e4341be8bc20d94a04a6b223d6/xpcom/io/SpecialSystemDirectory.cpp#428
rv = file->Create(nsIFile::DIRECTORY_TYPE, 0755);
There seem to be two things that could be considered causes of this problem
- the function
GetSpecialSystemDirectorythat purports to just get the path to a directory should not also create it _getDownloadsFoldershould not be using a function that creates a directory to get the name
In the latter case, I see 2 solutions:
- Modify the called C++ to do the right thing. This could be either adding a flag which indicates whether the call to
GetSpecialSystemDirectoryshould make the directory or making new functions entirely that don't create the directory - Modify the Javascript to set config values: when the user changes the download directory, we check if it is the system Desktop or Downloads directory. If it is, then we set
browser.download.folderListto 0 or 1, respectively. If we do that, then whenbrowser.download.folderListis set to 2, it is unnecessary to check whether the path is a system default path. If user modifies it manually (outside of preferences), they probably know what they're doing and don't need the full path of the folder hidden from them.
I prefer the latter because it is less invasive.
| Assignee | ||
Comment 22•3 years ago
|
||
Actually it looks like the Javascript already modifies browser.download.folderList when a new Downloads directory is selected, so I'm confused why calling this._getDownloadsFolder("Desktop") is necessary at all in _getSystemDownloadFolderDetails, since if browser.download.folderList is 2, the full path should be displayed.
| Assignee | ||
Comment 23•3 years ago
|
||
I just removed the creation code from GetUnixXDGUserDirectory and it doesn't appear to break anything. If Desktop doesn't exist, it will just open the home directory instead. And of course ~/Desktop no longer gets created when about:preferences is opened.
Comment 24•3 years ago
|
||
(In reply to nihal from comment #21)
This problem has been bothering me for some time.
Out of interest, do you also see bug 922719 or should we mark that as works-for-me?
(In reply to nihal from comment #23)
I just removed the creation code from
GetUnixXDGUserDirectoryand it doesn't appear to break anything. If Desktop doesn't exist, it will just open the home directory instead.
This would potentially re-break bug 1737926 in that downloads will just fail if the default is set to a directory that doesn't exist, depending on the system in question. It might also (depending on e.g. the filepicker code in this example) cause issues with other consumers of the directory service that look up the desktop dir and assume it then exists, e.g. https://searchfox.org/mozilla-central/rev/abf6758ed833c203f84703aa2e3e3d317571b1e9/toolkit/content/contentAreaUtils.js#698 .
(In reply to nihal from comment #21)
In the latter case, I see 2 solutions:
- Modify the called C++ to do the right thing. This could be either adding a flag which indicates whether the call to
GetSpecialSystemDirectoryshould make the directory
Adding flags in this case would mean passing a bool through a bunch of callstack, which means changing a bunch of functions, including ones that are generic (i.e. the directory service), where you would then have to implement support for the flag across all the x-platform directory getters (tedious and error-prone, as some may want different defaults than others), or the flag would be oddly specific (generic "getFile" method with optional bool "aDontCreateDesktopDir"), or the flag would not do what it says on the tin (opt in/out of creating a directory) for the vast majority of directories. None of those seem appealing.
or making new functions entirely that don't create the directory
This seems similarly tedious for similar reasoning... We could add an alias to the dir service (e.g. DeskNoCreate) and then implement that, I guess?
- Modify the Javascript to set config values: when the user changes the download directory, we check if it is the system Desktop or Downloads directory. If it is, then we set
browser.download.folderListto 0 or 1, respectively. If we do that, then whenbrowser.download.folderListis set to 2, it is unnecessary to check whether the path is a system default path.
AIUI if we do this we would still create the desktop directory whenever the user changes the value here, right? I guess that is better than the status quo...
| Assignee | ||
Comment 25•3 years ago
|
||
(In reply to :Gijs (he/him) from comment #24)
(In reply to nihal from comment #21)
This problem has been bothering me for some time.
Out of interest, do you also see bug 922719 or should we mark that as works-for-me?
(In reply to nihal from comment #23)
I just removed the creation code from
GetUnixXDGUserDirectoryand it doesn't appear to break anything. If Desktop doesn't exist, it will just open the home directory instead.This would potentially re-break bug 1737926 in that downloads will just fail if the default is set to a directory that doesn't exist, depending on the system in question. It might also (depending on e.g. the filepicker code in this example) cause issues with other consumers of the directory service that look up the desktop dir and assume it then exists, e.g. https://searchfox.org/mozilla-central/rev/abf6758ed833c203f84703aa2e3e3d317571b1e9/toolkit/content/contentAreaUtils.js#698 .
True, but in these cases we can just check whether the directory exists and create it when we actually need to save something to it (in Javascript). If I understand correctly, the download failing would also happen if the user sets their download directory and then deletes it. If we create the directory when it is actually needed, this would solve that problem to.
So I think the best solution is the following: remove the existence check and creation code from GetUnixXDGUserDirectory, and instead perform the existence check and creation right before the directory is opened in the file picker. There are not that many areas where this happens, so it seems pretty easy to do. Does this sound reasonable to you?
Comment 26•3 years ago
•
|
||
(In reply to nihal from comment #25)
(In reply to :Gijs (he/him) from comment #24)
(In reply to nihal from comment #21)
This problem has been bothering me for some time.
Out of interest, do you also see bug 922719 or should we mark that as works-for-me?
(In reply to nihal from comment #23)
I just removed the creation code from
GetUnixXDGUserDirectoryand it doesn't appear to break anything. If Desktop doesn't exist, it will just open the home directory instead.This would potentially re-break bug 1737926 in that downloads will just fail if the default is set to a directory that doesn't exist, depending on the system in question. It might also (depending on e.g. the filepicker code in this example) cause issues with other consumers of the directory service that look up the desktop dir and assume it then exists, e.g. https://searchfox.org/mozilla-central/rev/abf6758ed833c203f84703aa2e3e3d317571b1e9/toolkit/content/contentAreaUtils.js#698 .
True, but in these cases we can just check whether the directory exists and create it
Except we can't always do that, when we fetch the directory in the content process, as that is sandboxed. This might happen in https://searchfox.org/mozilla-central/source/dom/html/HTMLInputElement.cpp#357 , but I'm not 100% sure (would need to work out if that code is running in the parent process or child - I think child, as callers at e.g. https://searchfox.org/mozilla-central/rev/abf6758ed833c203f84703aa2e3e3d317571b1e9/dom/html/HTMLInputElement.cpp#545 seem to live in the child, given that they have direct element references to inputs in the page). So in that case we'd probably need to fall back to the home dir. I think that's fine, but worth bearing in mind.
In fact, it may be preferable to fall back to $HOME anyway.
when we actually need to save something to it (in Javascript). If I understand correctly, the download failing would also happen if the user sets their download directory and then deletes it. If we create the directory when it is actually needed, this would solve that problem to.
This is what bug 1737926 did for the download case. We would now have to audit and do this for all the relevant consumers of the "Desk" directory service, the relevant #define ( https://searchfox.org/mozilla-central/search?q=symbol:M_b890687da901ef14&redirect=false ), and any of the C++ consumers that end up calling the getter you identified through other call paths (I think there aren't any but it's possible I missed something, there's... more indirection than I would consider ideal, if I were designing this from scratch...).
So I think the best solution is the following: remove the existence check and creation code from
GetUnixXDGUserDirectory, and instead perform the existence check and creation right before the directory is opened in the file picker. There are not that many areas where this happens, so it seems pretty easy to do. Does this sound reasonable to you?
It sounds reasonable. It's more work than the other alternative you outlined, but probably more "correct" longer term.
The other option would be to fall back silently to just $HOME in the GetUnixXDGUserDirectory code, rather than pushing that responsibility to the consumers. That would be a smaller patch and would also solve the issue (assuming you're not running some... peculiar... kind of unix env where $HOME doesn't exist?!).
(FWIW, I'm also still curious about what the fate of bug 922719 should be :-) )
| Assignee | ||
Comment 27•3 years ago
|
||
OK, I agree that $HOME is a more reasonable fallback on Linux, I'll upload a patch that fixes this soon.
I still think it makes more sense for the directories to be created lazily when necessary, but from what you said, it seems that sandboxing might make it more harder than I thought. Maybe this is a patch for another day :)
With regard to bug 922719, I cannot reproduce it.
| Assignee | ||
Comment 28•3 years ago
|
||
There are many Linux systems where $HOME/Desktop doesn't exist, so falling
back to $HOME, which is treated as the "default" by other programs anyway,
makes more sense.
This prevents the creation of $HOME/Desktop every time about:preferences
is opened.
Updated•3 years ago
|
Updated•3 years ago
|
Comment 29•3 years ago
|
||
Comment 30•3 years ago
|
||
| bugherder | ||
Updated•3 years ago
|
Updated•3 years ago
|
Description
•