Bug 434327 - Fallback to $HOME in absence of $HOME/Desktop r=settings-reviewers,Gijs

There are many Linux systems where $HOME is preferred as the "default"
directory to $HOME/Desktop.

This prevents the creation of $HOME/Desktop every time about:preferences
is opened.

Differential Revision: https://phabricator.services.mozilla.com/D165979